syntax = "proto3";

package go.micro.srv.acl;

service Acl {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
	rpc Login (LoginRequest) returns (LoginResponse) {}
	rpc UpdateUser (UpdateUserRequest) returns (EmptyMessage) {}
	rpc DeleteUser(DeleteUserRequest) returns (EmptyMessage) {}
	rpc DisableUser (DisableUserRequest) returns (EmptyMessage) {}
	rpc Users (UsersRequest) returns (UsersResponse) {}
	rpc UserDetails (UserDetailsRequest) returns (UserDetailsResponse) {}
	rpc PasswordResetToken (PasswordResetTokenRequest) returns (PasswordResetTokenResponse) {}
	rpc ResetPassword (ResetPasswordRequest) returns (EmptyMessage) {}
	rpc ChangePassword (ChangePasswordRequest) returns (EmptyMessage) {}
	rpc AddRole (AddRoleRequest) returns (AddRoleRequest) {}
	rpc GetRoles (EmptyMessage) returns (GetRolesResponse) {}
	rpc ChangeRole (ChangeRoleRequest) returns (EmptyMessage) {}
}

message EmptyMessage {}

message CreateUserRequest {
	string username = 1;
	string password = 2;
	string email = 3;
	string phone_number = 4;
	string name = 5;
	string role = 6;
}

message CreateUserResponse {
	string id = 1;
}

// Login
message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginResponse {
	string username = 1;
	string email = 2;
	string phone_number = 3;
	string name = 4;
	string role = 5;
	string token = 6;
}

// Update
message UpdateUserRequest {
	string username = 1;
	string email = 2;
	string phoneNumber = 3;
	string name = 4;
}

// Delete User
message DeleteUserRequest {
	string username = 1;
}

// Disable
message DisableUserRequest {
	string username = 1;
}

// List
message UsersRequest {
	int32 skipCount = 1;
	int32 maxResultCount = 2;
}

message UsersResponse {
	int32 totalCount = 1;
	repeated User users = 2;
}

message User {
	string id = 1;
	string username = 2;
	string email = 3;
	string phoneNumber = 4;
	string name = 5;
	string role = 6;
}

// Details
message UserDetailsRequest {
	string username = 1;
}

message UserDetailsResponse {
	User user = 1;
}

// Password
message PasswordResetTokenRequest {
	string username = 1;
}

message PasswordResetTokenResponse {
	User user = 1;
	string token = 2;
}

message ResetPasswordRequest {
	string username = 1;
	string token = 2;
}

message ChangePasswordRequest {
	string username = 1;
	string currentPassword = 2;
	string newPassword = 3;
}

// Role
message AddRoleRequest {
	string name = 1;
}

message AddRoleResponse {
	string id = 1;
}

message GetRolesResponse {
	repeated Role roles = 1;
}

message Role {
	string id = 1;
	string name = 2;
}

message ChangeRoleRequest {
	string username = 1;
	string role = 2;
}
